examples/syntax_error/deep.js
load('./deeper.js').then(function (v) {
    console.log(v + '!');
})
